# RTXDI

./: CMakeLists.txt
Samples/FullSample/Shaders/: CMakeLists.txt  CompositingPass.hlsl  PostprocessGBuffer.hlsl  ShaderParameters.h  Shaders.cfg
Samples/FullSample/Shaders/LightingPasses/: BrdfRayTracing.hlsl  ShadeSecondarySurfaces.hlsl  ShadingHelpers.hlsli
Samples/FullSample/Shaders/LightingPasses/DI/: FusedResampling.hlsl  GenerateInitialSamples.hlsl  ShadeSamples.hlsl
Samples/FullSample/Shaders/LightingPasses/GI/: FinalShading.hlsl
Samples/FullSample/Shaders/LightingPasses/RtxdiApplicationBridge/: RAB_Buffers.hlsli  RAB_LightSampling.hlsli
Samples/FullSample/Source/: CMakeLists.txt  RenderTargets.cpp  RenderTargets.h  Testing.cpp  UserInterface.cpp  UserInterface.h  main.cpp
Samples/FullSample/Source/RenderPasses/: CompositingPass.cpp  GBufferPass.cpp  GBufferPass.h  LightingPasses.cpp  LightingPasses.h  PrepareLightsPass.cpp
